styles.css
/* Main Stuff */

@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap');

@keyframes moveRight {
  from {
    background-position: 0% center;
  }
  to {
    background-position: -200% center;
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root,
html {
  --base-font-size: 1rem;

  scroll-behavior: smooth;
  height: 100%;
  font-size: var(--base-font-size);
  background-color: rgb(13, 13, 13);
}

body {
  min-height: 100%;
  color: #f3d0fc;
  font-family: 'Lexend', sans-serif;
  font-weight: 100;
  font-size: 1.6rem;
}

a {
  text-decoration: none;
  color: rgb(240, 240, 240);
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

h1,
h2,
h3 {
  line-height: normal;
  font-weight: 100;
}

h3 {
  font-size: 1.5rem;
  margin-block-end: 1rem;
  text-align: center;
}

section {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 1rem;
}

section:not(#intro) h2 {
  position: relative;
  z-index: 1;
  font-size: 1.5rem;
  margin-block-end: 1rem;
  border-width: 1px;
  border-style: solid;
  border-image: linear-gradient(
      to right,
      rgb(190, 92, 232),
      rgb(195, 179, 223),
      rgb(244, 143, 177),
      rgb(187, 85, 230)
    )
    0 0 100% 0;
}

section .content {
  position: relative;
  z-index: 1;
}

/* We're going to use the :before pseudo element for the section's background image. */
section::before {
  content: '';
  display: block;
  position: absolute;
  z-index: -1;
  inset: 0;
  background-position: 50% 0;
  background-size: cover;
  background-repeat: no-repeat;
  transition: opacity 1s;
}

section.in-view::before {
  opacity: max(calc(1 - var(--intersecting-ratio)), 0.1);
}

section.in-view .content {
  opacity: var(--intersecting-ratio);
}

/* Intro Section */

#intro::before {
  background-image: url('/assets/bg.jpg');
  background-position: right bottom;
  background-size: min(120%, 1200px);
  color: #f3d0fc;
  transition: background-position 1s;
}

h1 {
  font-weight: 100;
  font-size: 3rem;
  margin-bottom: 1rem;
  background: linear-gradient(121deg, #ad00ff 0%, #0c0056 100%),
    linear-gradient(121deg, #fa00ff 0%, rgba(0, 255, 71, 0) 100%),
    linear-gradient(127deg, #00f0ff 0%, #a80000 100%),
    radial-gradient(107% 142% at 15% 104%, #f3d0fc 0%, #1700a4 100%),
    radial-gradient(100% 100% at 50% 0%, #7300a9 0%, #00ffe0 100%),
    radial-gradient(100% 100% at 50% 0%, #7300a9 0%, #00ffe0 100%),
    linear-gradient(127deg, #b7d500 0%, #2200aa 100%);
  background-blend-mode: overlay, color, overlay, difference, color-dodge,
    difference, normal;
  background-size: 200%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#intro h2 {
  font-weight: 100;
  font-size: 1.5rem;
  margin-block-end: 1rem;
  color: #f3d0fc;
}

nav {
  max-width: min(100%, 25ch);
}

nav ul {
  list-style: none;
}

nav li {
  font-size: 1.5rem;
  border-block-end: 1px solid;
  padding-block: 1rem;
}

nav li:last-child {
  border-block-end: none;
}

.section-background {
  position: relative;
}

.glowing-list-1 {
  animation: moveRight 4s linear infinite;
  background: linear-gradient(
    to right,
    rgb(190, 92, 232),
    rgb(195, 179, 223),
    rgb(244, 143, 177),
    rgb(187, 85, 230)
  );
  background-size: 200%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.glowing-list-2 {
  animation: moveRight 4s linear infinite;
  background: linear-gradient(
    to left,
    rgb(123, 31, 162),
    rgb(103, 58, 183),
    rgb(244, 143, 177),
    rgb(123, 31, 162)
  );
  background-size: 200%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.glowing-list-3 {
  animation: moveRight 4s linear infinite;
  background: linear-gradient(
    to left,
    rgb(105, 87, 236),
    rgb(103, 58, 183),
    rgb(232, 96, 141),
    rgb(87, 107, 225)
  );
  background-size: 200%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.glowing-list-4 {
  animation: moveRight 5s linear infinite;
  background: linear-gradient(
    to right,
    rgb(20, 173, 50),
    rgb(103, 58, 183),
    rgb(131, 21, 89),
    rgb(31, 202, 53)
  );
  background-size: 200%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Bass section */
#bass {
  background-color: rgba(4, 7, 12, 255);
}

#bass::before {
  background-size: contain;
  background-position: -80px 20px;
  background-image: url('/assets/bg2.jpg');
  color: rgb(240, 240, 240);
}

.iframe-aspect-ratio {
  position: relative;
  width: 100%;
  height: 0;
  padding-block-end: 56.25%;
  margin-block-end: 2rem;
}

.iframe-aspect-ratio iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

#bass .more-videos {
  display: block;
  margin-block-end: 2rem;
  padding: 0.5rem;
  text-align: center;
  border: 1px solid #f3d0fc;
}

#bass .spotify iframe {
  width: 100%;
  height: 152px;
}

.container-bass {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  gap: 4vh;
  margin-right: 10vh;
  list-style: none;
}

.bass-class {
  width: 63%;
  float: right;
  text-align: center;
}

.arrow {
  height: 30px;
  margin-bottom: 50px;
}

#sound {
  background-color: rgba(4, 7, 12, 255);
  /* background-image: url("/assets/bg2.jpg"); */
  background-position: right 800px bottom 0px;
  background-attachment: fixed;
  background-size: contain;
  background-repeat: no-repeat;
  color: rgb(240, 240, 240);
}
/* Sound Design Section */
p {
  padding: 4px;
  font-size: 1.2rem;
}

#sound h3 {
  font-size: 1.5rem;
  padding-bottom: 10px;
  font-weight: 100;
  text-align: center;
  color: #f3d0fc;
}

#sound .project-videos {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.sound-box {
  border: 1px solid rgba(225, 225, 225, 0.4);
  padding: 15px;
  border-radius: 10px;
}
.project-links {
  padding-block: 0;
}
.project-links ul {
  list-style: none;
  text-align: center;
}
.project-links li {
  border-bottom: 1px solid rgba(225, 225, 225, 0.4);
  padding-block: 0.5rem;
}
.project-links li:last-child {
  border-bottom: none;
}
.kssl-text {
  padding-right: 15px;
}

.small-window {
  padding: 15px;
}
#sound .arrow {
  display: block;
  margin-left: auto;
  margin-right: auto;
  /* width: 50%; */
}
/* Contact Section */

#contact {
  background-color: rgba(4, 7, 12, 255);
  background-image: url('/assets/bg_contact.JPG');
  background-position: right 0px bottom 0px;
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;
  color: rgb(240, 240, 240);
}

#contact h2 {
  color: black;
}
#contact h3 {
  font-weight: 100;
  font-size: 1.5rem;
  padding-left: 12rem;
  padding-top: 10px;
  padding-bottom: 10px;
  color: black;
}
form {
  max-width: 20ch;
}
.feedback-input {
  border-radius: 5px;
  font-family: inherit;
  font-weight: 200;
  color: black;
  line-height: 22px;
  background-color: transparent;
  border: 1px solid black;
  transition: all 0.3s;
  padding: 13px;
  margin-bottom: 15px;
  width: 100%;
  box-sizing: border-box;
  outline: 0;
}

.feedback-input:focus {
  border: 1px solid gray;
}

textarea {
  height: 150px;
  line-height: 150%;
  resize: vertical;
}

.submit {
  font-family: inherit;
  font-weight: 200;
  background-color: transparent;
  width: 100%;
  border: 1px solid #0c0056;
  /* background: #cc6666; */
  border-radius: 5px;
  cursor: pointer;
  color: #10093e;
  font-size: 24px;
  padding-top: 10px;
  padding-bottom: 10px;
  transition: all 0.3s;
  /* margin-top: -4px; */
  /* font-weight: 700; */
  /* margin-bottom: 4rem; */
}

.submit:hover {
  background: rgba(255, 255, 255, 0.5);
}
.social-links {
  display: flex;
  gap: 1rem;
}
.social-links img {
  height: 50px;
}
.social-links a {
  transition: all 0.3s;
}
.social-links a:hover {
  opacity: 0.6;
}

@media screen and (min-width: 500px) {
  :root {
    font-size: calc(1.25 * var(--base-font-size));
  }

  #bass .content {
    align-self: flex-end;
    max-width: calc(500px - 2rem);
  }
}

@media screen and (min-width: 1000px) {
  :root {
    font-size: calc(1.5 * var(--base-font-size));
  }

  #bass .content {
    max-width: 50%;
  }

  #bass .videos {
    display: flex;
    gap: 0.5rem;
  }

  #bass .videos > :nth-child(1),
  #bass .videos > :nth-child(2) {
    flex-grow: 1;
  }

  #sound .project-videos {
    flex-direction: row;
    flex-wrap: wrap;
  }
  #sound .project-video:nth-child(1) {
    flex-grow: 2;
  }
  #sound .project-video:nth-child(2),
  #sound .project-video:nth-child(3) {
    flex-grow: 1;
    flex-basis: 0;
  }
  #sound .sound-box {
    flex-grow: 2;
  }
}

@media screen and (min-width: 1500px) {
  :root {
    font-size: calc(1.75 * var(--base-font-size));
  }
}

@media screen and (min-width: 2000px) {
  :root {
    font-size: calc(2 * var(--base-font-size));
  }
}

